--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,46 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules
+.pnpm-store
 
-# dependencies
-/node_modules
+# Build outputs
+.next
+out
+dist
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files
+# Development files
+.next
+*.log
 .env*
+!.env.example
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# vercel
-.vercel
+# TypeScript
+.next
+tsconfig.tsbuildinfo
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDE files
+.vscode
+.idea
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Temporary files
+tmp
+temp
+
+# Coverage
+coverage
+
+# Build tools
+.nyc_output
